filter by region implemnted, fixed styles for dark mode

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,8 +18,8 @@ body, html {
 nav {
     height: 80px;
     margin: 0;
-    background-color: var(--white);
-    box-shadow: 1px 1px 10px var(--shadow);
+    background-color: var(--background-elements);
+    box-shadow: 1px 1px 10px var(--shadow-elements);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -69,7 +69,7 @@ nav svg {
 .searcher-container {
     padding: 15px;
     background-color: var(--white);
-    box-shadow: 2px 2px 10px var(--shadow);
+    box-shadow: 2px 2px 10px var(--shadow-elements);
     border-radius: 5px;
     width: 375px;
     display: flex;
@@ -90,15 +90,15 @@ nav svg {
     width: 285px;
     height: 350px;
     border-radius: 7px;
-    box-shadow: 2px 2px 10px var(--shadow);
-    background-color: var(--white);
+    box-shadow: 2px 2px 10px var(--shadow-elements);
+    background-color: var(--background-elements);
     overflow-x: hidden;
     overflow-y: auto;
     cursor: default;
 }
 
 .card-root:hover {
-    box-shadow: 4px 4px 20px var(--shadow);
+    box-shadow: 4px 4px 20px var(--shadow-elements);
     transition: all 300ms;
 }
 
@@ -120,6 +120,23 @@ nav svg {
     font-size: 1.2em;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+.select-filter {
+    margin-top: 20px;
+}
+
+.select-filter select{
+    outline: none;
+    width: 200px;
+    box-shadow: 2px 2px 5px var(--shadow-elements);
+    font-size: 1.2em;
+    font-weight: 300;
+    border-radius: 5px;
+    background-color: var(--background-elements);
+    border: 0;
+    padding: 15px;
+    color: var(--text-color);
 }
 
 .countries-root-container {
@@ -154,8 +171,7 @@ nav svg {
     .filters-container {
         display: flex;
         flex-direction: column;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 50px auto 50px auto;
         padding: 0;
     }
 
@@ -168,6 +184,8 @@ nav svg {
     :root{
         --background: var(--very-light-gray);
         --text-color: var(--very-dark-blue-lm);
+        --background-elements: var(--white);
+        --shadow-elements: var(--shadow);
     }
 }
 
@@ -175,5 +193,7 @@ nav svg {
     :root{
         --background: var(--very-dark-blue-dm);
         --text-color: var(--white);
+        --background-elements: var(--dark-blue);
+        --shadow-elements: var(--very-dark-blue-dm);
     }
 }
